fixed spacing

--- a/src/Components/Facts/Facts.css
+++ b/src/Components/Facts/Facts.css
@@ -35,7 +35,7 @@
 }
 
 .timeline-component {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 
 }
 
@@ -50,7 +50,6 @@
 }
 
 .timeline-fact p {
-    margin-top: 20px;
     text-align: justify;
     width: 800px;
 }
